--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "@mui/icons-material": "^5.16.0",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.6",
     "@mui/x-data-grid": "^7.9.0",
+    "@mui/x-date-pickers": "^7.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
